# matplotcheck

./: .gitignore  CHANGELOG.rst  CONTRIBUTING.rst  Makefile  README.md  mypy.ini  pyproject.toml  readthedocs.yml
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: code-cov.yml  lint-docs.yml  publish-pypi.yml  test-minimal.yml
docs/: conf.py  matplotcheck.rst  modules.rst  sg_execution_times.rst
examples/: plot_test_histogram.py  plot_testing_basics.py  plot_vector_testing.py
matplotcheck/: base.py  raster.py  vector.py
matplotcheck/tests/: conftest.py  test_base_data.py  test_base_lines.py  test_lines.py  test_points.py  test_polygons.py
